# gauntlet

./: .gitignore  .secrets.baseline  DESIGN.json  DESIGN.md  GAUNTLET_SPEC.md  LICENSE  PRODUCT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  backlog.md  benchmarks.md  determinism.md  extension-points.md  fleet-aggregation.md  phase2-exploration-policy-interface.md  phase2-exploration-task10-ros2-integration.md  phase2-exploration-task2-reuse-audit.md  phase2-exploration-task3-drift-detector.md  phase2-exploration-task4-replay.md  phase2-exploration-task5-pybullet-env-registry.md  phase2-exploration-task6-pybullet-rendering.md  phase2-exploration-task7-genesis-backend.md  phase2-exploration-task8-genesis-rendering.md  phase2-exploration-task9-isaac-sim-adapter.md  phase2-rfc-001-huggingface-policy.md  phase2-rfc-002-lerobot-smolvla.md  phase2-rfc-003-drift-detector.md  phase2-rfc-004-trajectory-replay.md  phase2-rfc-005-pybullet-adapter.md  phase2-rfc-006-pybullet-rendering.md  phase2-rfc-007-genesis-adapter.md  phase2-rfc-008-genesis-rendering.md  phase2-rfc-009-isaac-sim-adapter.md  phase2-rfc-010-ros2-integration.md  phase3-rfc-019-fleet-aggregate.md  phase3-rfc-020-web-dashboard.md  phase3-rfc-021-real-to-sim-stub.md  plugin-development.md  polish-exploration-gymnasium-registration.md  polish-exploration-incremental-cache.md  polish-exploration-lhs-sampling.md  polish-exploration-multi-camera.md  polish-exploration-plugin-system.md  polish-exploration-rollout-video.md  polish-exploration-sobol-sampler.md  polish-exploration-type-tightening.md  realsim.md  security.md
examples/: aggregate_runs.py  build_fleet_dashboard.py  diff_two_runs.py  evaluate_dt.py  evaluate_groot.py  evaluate_multi_camera.py  evaluate_openvla.py  evaluate_pi0.py  evaluate_random_policy.py  evaluate_random_policy_genesis.py  evaluate_random_policy_isaac.py  evaluate_random_policy_lhs.py  evaluate_random_policy_mobile.py  evaluate_random_policy_sobol.py  evaluate_random_policy_with_video.py  evaluate_rdt.py  evaluate_smolvla.py  evaluate_smolvla_pybullet.py  evaluate_with_drift.py  gym_make_tabletop.py  iterative_eval_with_cache.py  publish_episodes_to_ros2.py  realsim_ingest_demo.py  register_custom_policy_plugin.py  replay_failure.py
examples/suites/: tabletop-basic-v1.yaml  tabletop-genesis-smoke.yaml  tabletop-isaac-smoke.yaml  tabletop-lhs-smoke.yaml  tabletop-pybullet-smoke.yaml  tabletop-smoke.yaml  tabletop-sobol-smoke.yaml
scripts/: bench_render_latency.py  bench_report.py  bench_rollout.py  bench_runner.py  bench_suite_loader.py  generate_pybullet_textures.py
scripts/perf/: _common.py  bench_render.py  bench_rollout.py  bench_runner_scaling.py  bench_suite_loader.py
src/gauntlet/: __init__.py  cli.py  plugins.py
src/gauntlet/aggregate/: __init__.py  analyze.py  cli.py  fleet_clustering.py  html.py  schema.py  sim_real.py
src/gauntlet/bisect/: __init__.py  bisect.py  cli.py
src/gauntlet/compare/: __init__.py  drift_map.py  github_summary.py
src/gauntlet/dashboard/: __init__.py  build.py
src/gauntlet/diff/: __init__.py  diff.py  paired.py  render.py
src/gauntlet/env/: __init__.py  base.py  color_attack.py  gym_registration.py  image_attack.py  instruction.py  mobile.py  registry.py  tabletop.py  tabletop_stack.py
src/gauntlet/monitor/: __init__.py  ae.py  conformal.py  entropy.py  schema.py  score.py  train.py
src/gauntlet/policy/: __init__.py  base.py  dt.py  groot.py  huggingface.py  lerobot.py  pi0.py  random.py  rdt.py  registry.py  scripted.py
src/gauntlet/realsim/: __init__.py  io.py  pipeline.py  renderer.py  scene_input.py  scene_to_axis.py  schema.py
src/gauntlet/replay/: __init__.py  overrides.py  replay.py
src/gauntlet/report/: __init__.py  abstention.py  analyze.py  html.py  junit.py  schema.py  sobol_indices.py  trajectory_taxonomy.py  wilson.py
src/gauntlet/ros2/: __init__.py  publisher.py  recorder.py  schema.py
src/gauntlet/runner/: __init__.py  cache.py  determinism.py  episode.py  parquet.py  provenance.py  runner.py  sinks.py  video.py  worker.py
src/gauntlet/security/: __init__.py  paths.py  yaml_guard.py
src/gauntlet/suite/: __init__.py  adversarial.py  lhs.py  linter.py  (+5 more)
tests/: conftest.py  test_abstention_metrics.py  test_action_consistency.py  test_actuator_telemetry.py  test_adversarial_sampler.py  test_aggregate_fleet_clustering.py  test_api_docs_freshness.py  test_behavioral_metrics.py  test_bench_smoke.py  test_bisect.py  test_cache_cli.py  test_cache_runner.py  test_cli.py  test_cli_aggregate.py  test_cli_diff.py  test_cli_errors.py  test_cli_monitor_ros2.py  test_conformal_failure_detector.py  test_coverage_protocols.py  test_coverage_report.py  test_coverage_runner.py  test_coverage_suite.py  test_coverage_video.py  test_crn_paired_compare.py  test_dashboard.py  test_dashboard_cli.py  test_determinism_cross_backend.py  test_determinism_hash.py  test_determinism_mujoco.py  test_determinism_runner_workers.py  test_diff.py  test_diff_verdict.py  test_drift_map.py  test_dt_policy.py  test_e2e_example.py  test_early_stop_pruning.py  test_env.py  test_env_mobile.py  test_env_registry.py  test_extension_points.py  (+75 more)
tests/data/: cross_backend_deltas.json
tests/genesis/: test_determinism_genesis.py  test_env_genesis.py  test_render_genesis.py
tests/hf/: test_huggingface_policy.py
tests/isaac/: conftest.py  test_determinism_isaac.py  test_env_isaac.py  test_import_guards_isaac.py  test_perturbation_isaac.py  test_suite_loader_isaac.py
tests/lerobot/: test_lerobot_policy.py
tests/monitor/: __init__.py  test_ae.py  test_entropy.py  test_schema.py  test_trajectory_capture.py
tests/pybullet/: test_determinism_perturbation_pybullet.py  test_determinism_pybullet.py  test_env_pybullet.py  test_loader_pybullet.py  test_multi_camera_pybullet.py  test_perturbation_pybullet.py  test_render_pybullet.py
tests/ros2/: conftest.py  test_cli_ros2.py  test_import_guards.py  test_publisher.py  test_recorder.py  test_schema.py
tests/video/: __init__.py  test_html_video.py  test_runner_video.py  test_video_writer.py
(+24 files in other folders)
