[project]
name = "gauntlet"
version = "0.1.0"
description = "An evaluation harness for learned robot policies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Gauntlet contributors" },
]
keywords = ["robotics", "evaluation", "policy", "mujoco", "regression-testing"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mujoco>=3.2,<4",
    "gymnasium>=1.0,<2",
    "pydantic>=2.7,<3",
    "typer>=0.12,<1",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "jinja2>=3.1,<4",
    "pyyaml>=6.0,<7",
    # Ceiling bumped <15 -> <16 for RFC-007 (genesis-world transitively
    # resolves rich 15.0.0 and declares no upper bound of its own). The
    # CLI's Rich surface — Console, Text, rich.traceback — is stable
    # across 13.x/14.x/15.x.
    "rich>=13.7,<16",
]

# Optional extras — end-user-facing. Keeps core torch-free per spec §6.
# See docs/phase2-rfc-001-huggingface-policy.md §3,
# docs/phase2-rfc-002-lerobot-smolvla.md §3,
# docs/phase2-rfc-003-drift-detector.md §3,
# docs/phase2-rfc-005-pybullet-adapter.md §4 for rationale.
[project.optional-dependencies]
hf = [
    # Version floors mirror openvla/requirements-min.txt (Apr 2026) with
    # ceilings one major above to catch surprise breakage early.
    "torch>=2.2,<3",
    "transformers>=4.40,<5",
    "timm>=0.9.10,<2",
    "tokenizers>=0.19,<1",
    "pillow>=10.0,<12",
    # flash-attn is intentionally NOT listed: it requires CUDA at pip-install
    # time and breaks CPU-only installs. Users opt in separately per the
    # HuggingFacePolicy docstring.
]
# Independent extra for the lerobot / SmolVLA adapter — see RFC-002 §3.
lerobot = [
    "lerobot[smolvla]>=0.4,<1",
    "transformers>=4.40,<5",
    "pillow>=10.0,<12",
]
# Drift detector (Phase 2 Task 3).
# Torch is the only heavy dep; pillow is carried along so the optional
# image-AE path (deferred follow-up) does not silently ImportError on a
# user who flips it on.
monitor = [
    "torch>=2.2,<3",
    "pillow>=10.0,<12",
]
# Independent extra for the PyBullet backend (RFC-005).
# pybullet is a pure-Python/C++ package on PyPI, CPU-only, no CUDA needed,
# wheels on manylinux/macOS/Windows. 3.2 floor matches the first release
# with the stable physics-engine parameters we depend on for bit-determinism.
pybullet = [
    "pybullet>=3.2,<4",
]
# Independent extra for the Genesis backend (RFC-007).
# genesis-world is distributed as py3-none-any wheels (82.6 MB) with
# Requires-Python <3.14,>=3.10. The 0.4.x->0.5 boundary is expected to
# include API breaks, so the pin is tighter than the other extras
# (RFC-007 §4.2). torch is a runtime dep that Genesis imports at
# package scope but does NOT declare in install_requires (upstream
# delegates to users so they can pick CPU/CUDA/ROCm wheels) — listed
# here explicitly so ``uv sync --extra genesis`` always produces a
# working import. torch>=2.2,<3 matches the [hf] and [monitor] floors
# so a combined ``--extra hf --extra genesis`` resolves to one torch.
genesis = [
    "genesis-world>=0.4,<0.5",
    "torch>=2.2,<3",
]
# Independent extra for the ROS 2 integration (RFC-010).
# Empty on purpose: rclpy is NOT distributed via PyPI in its official
# form (RFC-010 §3). Users install via ``apt install ros-<distro>-rclpy``
# or ``docker run osrf/ros:<distro>-desktop`` and source the relevant
# ``setup.bash`` before ``gauntlet ros2 publish`` works. The lazy-import
# guard in ``gauntlet.ros2.publisher`` / ``.recorder`` raises a clean
# ImportError pointing at the apt/Docker install path on first use.
# The extra exists so ``uv sync --extra ros2`` is a recognised
# invocation and so the [ros2-dev] dev-group has a partner extra.
ros2 = []
# Independent extra for the Isaac Sim backend (RFC-009).
# isaacsim wraps NVIDIA Omniverse Kit and requires a CUDA-capable
# RTX-class GPU at runtime. The PyPI wheel resolves on CPU-only
# machines but every meaningful import probes for the GPU and fails,
# so this extra is intended for a developer's GPU workstation. CI
# tests use a sys.modules-injected fake `isaacsim` namespace and do
# NOT install this extra (RFC-009 §8). isaacsim brings its own
# transitive torch / numpy / gymnasium so we do not declare them.
#
# Pin: >=5.0,<6 — Isaac Sim 5.0 is the first release that publishes
# Python 3.11 wheels (older 4.x line was cp310-only); 6.x bumped to
# cp312-only, which we cannot use under our `requires-python = ">=3.11"`
# floor without an explicit Python upper bound. Revisit when the
# Python floor moves.
isaac = [
    "isaacsim>=5.0,<6",
]

[project.scripts]
gauntlet = "gauntlet.cli:app"

[project.urls]
Homepage = "https://github.com/gauntlet-eval/gauntlet"
Issues = "https://github.com/gauntlet-eval/gauntlet/issues"

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<7",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "types-pyyaml>=6.0,<7",
    "pandas-stubs>=2.2,<3",
]
# CI-only group so the HF pytest job can pull dev + hf together.
hf-dev = [
    {include-group = "dev"},
    "pytest-mock>=3.12,<4",
]
# CI-only group so the lerobot pytest job can pull dev + lerobot together.
lerobot-dev = [
    {include-group = "dev"},
    "pytest-mock>=3.12,<4",
]
# CI-only group for the monitor / drift-detector job.
monitor-dev = [
    {include-group = "dev"},
    "pytest-mock>=3.12,<4",
]
# CI-only group for the pybullet pytest job.
pybullet-dev = [
    {include-group = "dev"},
    "pytest-mock>=3.12,<4",
]
# CI-only group for the genesis pytest job.
genesis-dev = [
    {include-group = "dev"},
    "pytest-mock>=3.12,<4",
]
# CI-only group for the ros2 pytest job. rclpy is mocked at the module
# boundary in tests/ros2/conftest.py, so no real ROS 2 install is needed.
ros2-dev = [
    {include-group = "dev"},
    "pytest-mock>=3.12,<4",
]
# CI-only group for the isaac pytest job (RFC-009). pytest-mock is
# pulled in for parity with the other backend dev groups; the
# default-job mocked tests in tests/isaac/ use sys.modules injection
# in conftest.py rather than pytest-mock fixtures, but having
# pytest-mock available keeps future test additions trivial.
isaac-dev = [
    {include-group = "dev"},
    "pytest-mock>=3.12,<4",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

# NVIDIA's index (pypi.nvidia.com) hosts the actual omniverse-kit /
# isaacsim wheels. The PyPI placeholders for those packages are
# wheel-stub shims that download from the NVIDIA index at install
# time, which means uv's resolver also needs to see the NVIDIA index
# to populate the lockfile. Without this entry,
# `uv sync` / `uv lock` fail trying to build the omniverse-kit
# placeholder. RFC-009 §4.1 / §8.
# isaacsim pins numpy==1.26.0 (via isaacsim-kernel); the other heavy
# extras (genesis, hf, lerobot, monitor) all want numpy>=1.26.4 or
# numpy>=2. Mark them as mutually exclusive at install-time. uv
# resolves each side of the conflict independently, so a developer
# either gets `[isaac]` (Isaac Sim workstation) or one of the other
# heavy backends — never both in one venv. CI installs each extra in
# its own job, so the conflict never bites in practice. RFC-009 §4.3.
[tool.uv]
conflicts = [
    [
        { extra = "isaac" },
        { extra = "genesis" },
    ],
    [
        { extra = "isaac" },
        { extra = "hf" },
    ],
    [
        { extra = "isaac" },
        { extra = "lerobot" },
    ],
    [
        { extra = "isaac" },
        { extra = "monitor" },
    ],
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[tool.uv.sources]
isaacsim = { index = "nvidia" }
isaacsim-kernel = { index = "nvidia" }
isaacsim-app = { index = "nvidia" }
isaacsim-core = { index = "nvidia" }
isaacsim-asset = { index = "nvidia" }
isaacsim-rl = { index = "nvidia" }
isaacsim-cortex = { index = "nvidia" }
isaacsim-extscache-physics = { index = "nvidia" }
isaacsim-extscache-kit = { index = "nvidia" }
isaacsim-extscache-kit-sdk = { index = "nvidia" }
isaacsim-utils = { index = "nvidia" }
isaacsim-storage = { index = "nvidia" }
isaacsim-template = { index = "nvidia" }
isaacsim-test = { index = "nvidia" }
isaacsim-replicator = { index = "nvidia" }
isaacsim-sensor = { index = "nvidia" }
isaacsim-robot = { index = "nvidia" }
isaacsim-robot-motion = { index = "nvidia" }
isaacsim-robot-policy = { index = "nvidia" }
isaacsim-robot-setup = { index = "nvidia" }
isaacsim-ros2 = { index = "nvidia" }
isaacsim-gui = { index = "nvidia" }
isaacsim-benchmark = { index = "nvidia" }
isaacsim-code-editor = { index = "nvidia" }
isaacsim-example = { index = "nvidia" }
omniverse-kit = { index = "nvidia" }

# ---------- Tooling ----------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
# The monitor torch modules put ``try: import torch`` at module scope
# to raise the install-hint before any downstream import runs. That
# forces ``from gauntlet.monitor.{ae,train,score}`` imports of the
# sibling torch-free modules (``schema``, ``entropy``) to land below
# the guard, which ruff flags as E402. The ordering is intentional.
"src/gauntlet/monitor/ae.py" = ["E402"]
"src/gauntlet/monitor/train.py" = ["E402"]
"src/gauntlet/monitor/score.py" = ["E402"]
# The monitor-marked test module calls ``pytest.importorskip('torch')``
# at module scope so the default (torch-free) pytest collection does
# not blow up. Imports of torch-backed gauntlet modules therefore land
# after executable statements — same E402 pattern as the modules above.
"tests/monitor/test_ae.py" = ["E402"]
# The ros2 modules put ``try: import rclpy`` at module scope to raise
# the install-hint before any downstream import runs. That forces the
# sibling ``from gauntlet.ros2.schema import ...`` imports to land
# below the guard, which ruff flags as E402. The ordering is
# intentional — same shape as the monitor torch modules above.
"src/gauntlet/ros2/publisher.py" = ["E402"]
"src/gauntlet/ros2/recorder.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
disallow_untyped_defs = true
disallow_any_generics = true
files = ["src", "tests"]

# MuJoCo bindings expose a large untyped C API surface.
# Per spec §6, Any is permitted at the MuJoCo FFI boundary only.
[[tool.mypy.overrides]]
module = ["mujoco", "mujoco.*"]
ignore_missing_imports = true

# Optional / not-yet-typed deps. Trim as upstream stubs land.
[[tool.mypy.overrides]]
module = ["gymnasium", "gymnasium.*"]
ignore_missing_imports = true

# Optional HF extras — let mypy import-check ``policy/huggingface.py`` even
# when torch/transformers/PIL aren't installed (default job runs torch-free).
# Also covers the [monitor] extra (torch + PIL).
[[tool.mypy.overrides]]
module = ["torch", "torch.*", "transformers", "transformers.*", "PIL", "PIL.*"]
ignore_missing_imports = true

# Optional lerobot extras — let mypy import-check ``policy/lerobot.py`` even
# when lerobot isn't installed (default job runs torch-/lerobot-free).
[[tool.mypy.overrides]]
module = ["lerobot", "lerobot.*"]
ignore_missing_imports = true

# ``StateAutoencoder(nn.Module)`` subclasses torch.nn.Module — typed as
# ``Any`` when the stubs are absent. mypy --strict's
# ``disallow_subclassing_any`` would flag that; we relax it only inside
# the monitor tree so the rest of the codebase keeps the strict rule.
[[tool.mypy.overrides]]
module = ["gauntlet.monitor.ae", "gauntlet.monitor.train", "gauntlet.monitor.score"]
disallow_subclassing_any = false

# pybullet ships no type stubs. Per spec §6, Any is permitted at FFI boundaries;
# this override lets mypy import-check env/pybullet/* even when the
# [pybullet] extra isn't installed.
[[tool.mypy.overrides]]
module = ["pybullet", "pybullet_data"]
ignore_missing_imports = true

# genesis-world ships no type stubs. Same FFI-boundary carve-out as
# pybullet/mujoco — lets mypy import-check env/genesis/* even when the
# [genesis] extra isn't installed.
[[tool.mypy.overrides]]
module = ["genesis", "genesis.*"]
ignore_missing_imports = true

# rclpy and the standard ROS 2 message packages (std_msgs, sensor_msgs,
# geometry_msgs) are not pip-installable in their official form
# (RFC-010 §3 — distributed via apt or Docker). This override lets mypy
# import-check src/gauntlet/ros2/* even when the [ros2] extra is empty
# / no real ROS 2 install is on PATH. Per spec §6, Any is permitted at
# FFI boundaries; this is the rclpy FFI boundary.
[[tool.mypy.overrides]]
module = [
    "rclpy",
    "rclpy.*",
    "std_msgs",
    "std_msgs.*",
    "sensor_msgs",
    "sensor_msgs.*",
    "geometry_msgs",
    "geometry_msgs.*",
]
ignore_missing_imports = true

# isaacsim / omni / pxr ship no type stubs (Omniverse Kit is a closed
# C++ surface). Same FFI-boundary carve-out as pybullet / mujoco /
# genesis — lets mypy import-check env/isaac/* even when the [isaac]
# extra isn't installed (which is the case on every CI runner — the
# wheel resolves but Kit needs a GPU; see RFC-009 §4.4).
#
# omni / pxr are reserved for the rendering follow-up RFC (camera +
# lighting + USD material wiring); the state-only first cut only
# touches `isaacsim` + `isaacsim.core.api`. Kept here pre-emptively
# so the rendering RFC adds zero pyproject.toml lines.
[[tool.mypy.overrides]]
module = [
    "isaacsim",
    "isaacsim.*",
    "omni",
    "omni.*",
    "pxr",
    "pxr.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=gauntlet",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
markers = [
    "hf: tests that require the [hf] extra (torch, transformers, PIL)",
    "lerobot: tests that require the [lerobot] extra (lerobot, torch, PIL)",
    "monitor: tests that require the [monitor] extra (torch, PIL)",
    "pybullet: tests that require the [pybullet] extra (pybullet>=3.2)",
    "genesis: tests that require the [genesis] extra (genesis-world>=0.4, torch)",
    "ros2: tests that require the [ros2] extra (rclpy mocked at the module boundary)",
    "isaac: tests that require a real Isaac Sim install (isaacsim>=5.0) and a CUDA GPU; the default tests/isaac/ suite is mock-driven and unmarked",
]

[tool.coverage.run]
source = ["gauntlet"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
